Revert "msm8974-common: Disable ZRAM"
This reverts commit 20d7cdc3bbe6cc0f1386bd452fe5d15ab69e6379.

Change-Id: I6712e470e2df6b8c88a93bd09c45af8c7e7938f1

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -307,6 +307,10 @@ service wcnss-service /vendor/bin/wcnss_service
 on property:vendor.bluetooth.hciattach=true
     start hciattach
 
+on property:sys.boot_completed=1
+    # Enable ZRAM on boot_complete
+    swapon_all /vendor/etc/fstab.qcom
+
 on property:vendor.bluetooth.hciattach=false
     setprop vendor.bluetooth.status off
 
