--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -42,6 +42,9 @@ on init
     write /sys/block/zram0/comp_algorithm lz4
     write /proc/sys/vm/page-cluster 0
 
+    # tune vm-params
+    write /proc/sys/vm/min_free_kbytes 6140
+
 on fs
     mount_all /vendor/etc/fstab.qcom
 
