msm8974-common: set extra_free_kbytes to 34300
Change-Id: Ie9297a9a9fdf2f61069f60e6a512d67f647bb409

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,6 +44,7 @@ on init
 
     # tune vm-params
     write /proc/sys/vm/min_free_kbytes 6140
+    write /proc/sys/vm/extra_free_kbytes 34300
 
 on fs
     mount_all /vendor/etc/fstab.qcom
