--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -329,3 +329,6 @@ on property:ro.data.large_tcp_window_size=true
 
 on property:sys.shutdown.requested=*
     stop netmgrd
+
+on property:apexd.status=ready
+    mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
