msm8974-common: rootdir: fix path for cpuctl
Change-Id: I1231792f7a6b55f9c375726095b8d609d22e3715

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -108,7 +108,7 @@ on enable-low-power
     write /sys/module/cpu_boost/parameters/input_boost_freq 1497600
     write /sys/module/cpu_boost/parameters/input_boost_ms 40
 
-    write /dev/cpuctl/notify_on_migrate 1
+    write /dev/cpuctl/cpu.notify_on_migrate 1
 
 on boot
     trigger enable-low-power
