--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -197,6 +197,9 @@ on boot
     chmod 0664 /sys/devices/virtual/graphics/fb1/vendor_name
     chmod 0664 /sys/devices/virtual/graphics/fb1/product_description
 
+    chown system system /sys/devices/virtual/timed_output/vibrator/vtg_level
+    chmod 0664 /sys/devices/virtual/timed_output/vibrator/vtg_level
+
     # Create symlink for fb1 as HDMI
     symlink /sys/class/graphics/fb1 /dev/graphics/hdmi
 
