--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -237,6 +237,10 @@ on boot
     chown system system /sys/kernel/fast_charge/force_fast_charge
     chmod 0666 /sys/kernel/fast_charge/force_fast_charge
 
+    # backlight dimmer
+    chown system system /sys/backlight_dimmer/backlight_min
+    chmod 0666 /sys/backlight_dimmer/backlight_min
+
 ## Service start here
 service adsprpcd /vendor/bin/adsprpcd
     class main
