msm8974-common: DeviceParts: introduce backlight dimmer
Change-Id: I56396bd0db483653aa5c268d627722f7c83edd65

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -233,6 +233,10 @@ on boot
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
+    # backlight dimmer
+    chown system system /sys/backlight_dimmer/backlight_min
+    chmod 0666 /sys/backlight_dimmer/backlight_min
+
 ## Service start here
 service adsprpcd /vendor/bin/adsprpcd
     class main
