--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -237,6 +237,10 @@ on boot
     chown system system /sys/kernel/fast_charge/force_fast_charge
     chmod 0666 /sys/kernel/fast_charge/force_fast_charge
 
+    # backlight dimmer
+    chown system system /sys/devices/mdp.0/qcom,mdss_fb_primary.174/leds/lcd-backlight/max_brightness
+    chmod 0666 /sys/devices/mdp.0/qcom,mdss_fb_primary.174/leds/lcd-backlight/max_brightness
+
 ## Service start here
 service adsprpcd /vendor/bin/adsprpcd
     class main
