--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -241,6 +241,10 @@ on boot
     chown system system /sys/kernel/fast_charge/force_fast_charge
     chmod 0666 /sys/kernel/fast_charge/force_fast_charge
 
+    # headphone gain
+    chown system system /sys/kernel/sound_control/headphone_gain
+    chmod 0666 /sys/kernel/sound_control/headphone_gain
+
 ## Service start here
 service adsprpcd /vendor/bin/adsprpcd
     class main
